# go1_pybullet

./: README.md
examples/:  end2end_normal.ipynb  ActionPredictor.py  END2ENDPredictor.py  NMPCPredictor.py  NN_hybrid.ipynb  PAR_EST.py  actions_append.py  camera_test.py  collect_data_khadiv_style.py  gaussain_vdes.py  go1_IL_locomotion.py  go1_IL_locomotion_data.py  go1_IL_model_utils.py  go1_actions_trot.py  go1_cyclic.py  go1_cyclic_mhe.py  go1_data.py  go1_data_collection.py  go1_data_new.py  go1_data_noisy.py  go1_data_noisy_corrected.py  go1_demo.py  go1_different_terrains.py  go1_end2end_pd_policy.py  go1_end2end_tau_policy.py  go1_est2action_pd_policy.py  go1_est2action_tau_policy.py  go1_eval.py  go1_eval_new.py  go1_eval_test.py  go1_humanoids_data.py  go1_humanoids_data_working.py  go1_humanoids_eval.py  go1_humanoids_test.py  go1_humaoinds_data_collection.py  go1_humaoinds_phase_eval.py  go1_image_data.py  go1_image_data_new.py  go1_images_colle.py  go1_impendace.py  (+33 more)
examples/envs/: pybullet_env.py  pybullet_terrain_env.py
examples/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
examples/log/: latest_build
examples/motions/: weight_abstract.py
examples/motions/cyclic/: go1_motion.py  solo12_bound.py  solo12_trot.py  solo12_wip.py
examples/mpc/: go1_cyclic_gen.py
examples/plot/: plot.py  test_temp.py
robot_properties_go1/: package.xml  setup.py
robot_properties_go1/src/robot_properties_go1/: go1_config.py  resources.py
robot_properties_go1/src/robot_properties_go1/resources/urdf/: go1_minimal.urdf
(+50 files in other folders)
